# -

./: CMakeLists.txt  build.sh  life.py  test_life.py
Code/: main.cpp  main.hpp
Libraries/APP/Display/: LQ_TFT18_dri.cpp
Libraries/APP/IMU/: LQ_I2C_MPU6050.hpp
Libraries/Driver/: LQ_HW_ADC.cpp  WW_CAMERA.cpp  WW_TimerThread.cpp
Libraries/Driver/inc/: WW_CAMERA.h  WW_TimerThread.h
conductor/: algorithm-requirements.md  index.md  product.md  tech-stack.md  tracks.md  workflow.md
output/: CMakeCache.txt  Makefile  cmake_install.cmake  main
